style.css
body{
    background-color: #FDF6EE;
    margin: 0;
    padding: 0;

}

html{
    scroll-behavior: smooth;
}

.homepage{
    color: #f6a680; 
    font-family: 'GFSArtemisia', serif; 
    position: absolute; 
    top: 90px;
    left: 30px;  
    line-height: 0.3; 
}

.homepage h1{ 
    line-height: 1; 
    font-size: 6em; 
}

.homepage h3{
    font-size: 3em; 
}


.quote{ 
    color: #f6a680; 
    font-family: 'Poppins', sans-serif; 
    font-weight: 1000;
    text-align: right; 
    font-size: 1.5em; 
    position: absolute; 
    top: 450px; 
    right: 30px;
}

#arabic{
    font-weight: 1500;
    font-size: 2em;
    line-height: 0; 
}

.navbar {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 1000;
}

.navbar ul {
    list-style-type: none; 
    background-color: #f8dac8;  
    margin: 0px;
    padding: 25px; 
    overflow: hidden;
    display: flex;
    justify-content: flex-end;
}

.navbar a{
    color: #f6a680;
    font-family: 'Poppins', sans-serif; 
    font-size: 1.5em;
    font-weight: 1000;
    text-decoration: none;
    padding: 15px;
    position: relative; 
    transition: color 0.3s ease-in-out;
}

.navbar a::after {
    content: '';
    position: absolute;
    left: 0;
    bottom: 0;
    width: 100%;
    height: 3px;
    background-color: #f6a680;
    transform: scaleX(0);
    transition: transform 0.3s ease-in-out;
}

.navbar a:hover {
    color: #d17a50;
}

.navbar a:hover::after {
    transform: scaleX(1);
}

.navbar li{
    float: left; 
}

.icons{
    position: absolute;
    left: 10px;
    top: -1px;
    display: flex;
    gap: 10px;
    font-size: 1.5em;
    color: #f6a680;
}


.aboutme {
    margin-top: 700px;
    padding-left: 200px;
    position: absolute;
}

.aboutme h3{
    color: #f6a680;
    font-family: 'GFSArtemisia', serif;
    font-size: 3em;
    line-height: 0px;
}

.aboutme p{
    color: #f6a680;
    font-family: 'Poppins', sans-serif;
    font-size: 1em;
    font-weight: 700;
    padding-left: 43px;
    line-height: 1.5;
}

.aboutme img {
    width: 25%;
    height: auto;
    float: right;
    margin-right: 50px;
    right: 30px;
    padding-right: 0;
    border: 3px solid #f6a680;
    border-radius: 10px;
}

.aboutme h6{ 
    color: #f6a680;
    font-family: 'Poppins', sans-serif;
    font-size: 0.8em;
    font-weight: 700;
    padding-left: 850px;
}

.experiences {
    margin-top: 1300px;
    padding-left: 200px;
    position: absolute;
}

.experiences h3{
    color: #f6a680;
    font-family: 'GFSArtemisia', serif;
    font-size: 3em;
    line-height: 0;
}

.experiences li{
    color: #f6a680;
    font-family: 'Poppins', sans-serif;
    font-weight: 700;
    line-height: 1.5;
}

.projects {
    margin-top: 2000px;
    padding-left: 200px;
    position: absolute;
}

.projects h3{
    color: #f6a680;
    font-family: 'GFSArtemisia', serif;
    font-size: 3em;
    line-height: 0;
}

.projects p{
    color: #f6a680;
    font-family: 'Poppins', sans-serif;
    font-size: 1em;
    font-weight: 700;
    padding-left: 43px;
    line-height: 1.5;
}

.button {
    position: absolute;
    margin-left: 870px;
    bottom: 50px;
    display: inline-block;
    text-align: center;
    text-decoration: none;
    padding: 15px 20px;
    font-family: 'GFSArtemisia', serif;
    font-size: 1.5em;
    font-weight: 700;
    background-color: #f8dac8;
    color: #f6a680;
    border: 3px solid #f6a680;
    border-radius: 15px;
    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out, border-color 0.3s ease-in-out;
}

.button:hover {
    background-color: #f4c6ae;
    color: #f6a680;
}

.gallery {
    margin-top: 2500px;
    padding-left: 200px;
    position: absolute;
}

.gallery h3{
    color: #f6a680;
    font-family: 'GFSArtemisia', serif;
    font-size: 3em;
    line-height: 0;
}

.gallery p{
    color: #f6a680;
    font-family: 'Poppins', sans-serif;
    font-size: 1em;
    font-weight: 700;
    padding-left: 43px;
    line-height: 2;
}

.gallery img {
    width: 25%;
    height: auto;
    float: right;
    margin-right: 50px;
    right: 30px;
    padding-right: 0;
    border: 3px solid #f6a680;
    border-radius: 10px;
}

.buttonGallery {
    position: absolute;
    margin-left: 510px;
    bottom: 50px;
    display: inline-block;
    text-align: center;
    text-decoration: none;
    padding: 15px 60px;
    font-family: 'GFSArtemisia', serif;
    font-size: 1.5em;
    font-weight: 700;
    background-color: #f8dac8;
    color: #f6a680;
    border: 3px solid #f6a680;
    border-radius: 15px;
    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out, border-color 0.3s ease-in-out;
}

.buttonGallery:hover {
    background-color: #f4c6ae;
    color: #f6a680;
}

.contactbutton{
    position: absolute;
    top: 100px;
    right: 10px;
    display: inline-block;
    padding: 10px 20px;
    background-color: #f6a680;
    color: white;
    font-size: 1.2em;
    font-weight: bold;
    border-radius: 10px;
    text-align: center;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

.contactbutton:hover {
    background-color: #e08c5c;
}

*, *::after, *::before{
    box-sizing: border-box;
}

.contactme{
    position: fixed; 
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) scale(0);
    transition: 200ms ease-in-out;
    border: 5px solid #f6a680;
    border-radius: 15px;
    z-index: 100; /* makes objects go on top, fix later if needed.*/
    background-color: #FDF6EE;
    width: 700px; 
    max-width: 80%; 
}

.contactme.active {
    transform: translate(-50%, -50%) scale(1);
}

.contactheader{
    padding: 5px 5px;
    margin: 0;
    display: flex; 
    justify-content: space-between;
    border-bottom: 2px solid #f6a680;
}

.contactheader .contacttitle{
    font-family: 'GFSArtemisia', serif;
    font-size: 1.5em;
    font-weight: 700;
    color: #f6a680; 
}

.contactheader .closebutton{
    display: flex;
    align-items: center;
    justify-content: center;
    width: 30px;
    height: 30px;
    font-size: 1.5em;
    font-weight: bold;
    cursor: pointer;
    color: white;
    background-color: red;
    border: none;
    border-radius: 5px;
    transition: background-color 0.3s ease;
}

.closebutton:hover {
    background-color: rgb(179, 3, 3);
}

.contactbody{
    padding: 10px 15px; 
    font-family: 'GFSArtemisia', serif;
    font-size: 1.2em;
    font-weight: 700;
    color: #f6a680; 
}

#overlay{
    position: fixed; 
    opacity: 0;
    transition: 200ms ease-in-out;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0,0,0,0.6);
    pointer-events: none;
}

#overlay.active{
    opacity: 0.2;
    pointer-events: all;
}

textarea {
    resize: none;
}

